@@ -10,9 +10,9 @@ define( function( require ) {
   'use strict';
 
   // imports
-  var BarMagnetNode = require( 'barmagnet/view/BarMagnetNode' );
+  var BarMagnetNode = require( 'EXAMPLE_SIM/barmagnet/view/BarMagnetNode' );
   var Bounds2 = require( 'DOT/Bounds2' );
-  var ControlPanel = require( 'barmagnet/view/ControlPanel' );
+  var ControlPanel = require( 'EXAMPLE_SIM/barmagnet/view/ControlPanel' );
   var Dimension2 = require( 'DOT/Dimension2' );
   var inherit = require( 'PHET_CORE/inherit' );
   var ModelViewTransform2 = require( 'PHETCOMMON/view/ModelViewTransform2' );
