@@ -1,24 +1,0 @@
-// Copyright 2002-2013, University of Colorado Boulder
-
-/**
- * Images loader for this simulation.
- * <p>
- * This object will be extended lazily after the image loader completes.
- * Makes it possible to load through the module system rather having to
- * pass as a parameter everywhere or resort to using a global.
- *
- * @author Sam Reid
- * @author Chris Malley (PixelZoom, Inc.)
- */
-define( function() {
-  'use strict';
-  return {
-    imageNames: [
-      'barMagnet.png',
-      'reset_button_disabled.png',
-      'reset_button_down.png',
-      'reset_button_over.png',
-      'reset_button_up.png'
-    ]
-  };
-} );
